# cs229

./: hello.py  pyproject.toml  startup.ipynb
jupyter_notebook/: linear_regression.ipynb
jupyter_notebook/optional_labs/C1-Supervised ML_Regression and Classification/Week 1/: C1_W1_Lab04_Cost_function_Soln.ipynb  C1_W1_Lab05_Gradient_Descent_Soln.ipynb
jupyter_notebook/optional_labs/C1-Supervised ML_Regression and Classification/Week 2/: C1_W2_Lab01_Python_Numpy_Vectorization_Soln.ipynb  C1_W2_Lab02_Multiple_Variable_Soln.ipynb  C1_W2_Lab03_Feature_Scaling_and_Learning_Rate_Soln.ipynb  C1_W2_Lab05_Sklearn_GD_Soln.ipynb  C1_W2_Linear_Regression.ipynb
jupyter_notebook/optional_labs/C1-Supervised ML_Regression and Classification/Week 3/: C1_W3_Lab01_Classification_Soln.ipynb  C1_W3_Lab07_Scikit_Learn_Soln.ipynb  C1_W3_Lab09_Regularization_Soln.ipynb
