[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Sunya", email = "ydsunyan123@gmail.com"},
]
dependencies = [
    "notebook>=7.0.6",
    "numpy>=1.25.2",
    "matplotlib>=3.8.1",
    "scikit-learn>=1.3.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

